--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <title>Index Page</title>
-           <h1>Index Page/h1>
+           <h1>Index Page</h1>
             <p>
-                
+
             </p>
     </body>
 </html>
