--- a/public/documentation.html
+++ b/public/documentation.html
@@ -2,17 +2,64 @@
 <html lang="eng" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Documentation</title>
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
-        <title>Movies Index</title>
-        <h1>Documentation</h1>
-        <p>
-                To build the server-side component of a “movies” web application. The web
+        <header>
+            <title>Movies Index</title>
+            <h1>Documentation</h1>
+        </header>
+
+        <div>
+            <h3>Objective</h3>
+            <p>To build the server-side component of a “movies” web application. The web
             application will provide users with access to information about different
             movies, directors, and genres. Users will be able to sign up, update their
-            personal information, and create a list of their favorite movies.
+            personal information, and create a list of their favorite movies.</p>
+        </div>
+        
+        <div>
+            <h2>URL Endpoints</h2>
 
-        </p>
+            <table>
+                <tr>
+                    <th>Business Logic</th>
+                    <th>URL</th>
+                    <th>HTTP Method</th>
+                    <th>Request</th>
+                    <th>Response</th>
+                </tr>
+                <tr>
+                    <td>Return a list of ALL movies</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
+        
     </body>
 </html>
