finished updating requests

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -47,14 +47,14 @@
                 </tr>
                 <tr>
                     <td>Return data about a genre (description) by name/title (e.g., “Thriller”)</td>
-                    <td>/movies:title/genre</td>
+                    <td>/genre</td>
                     <td>GET</td>
                     <td>None</td>
                     <td>A JSON obect holding the genre of the movie</td>
                 </tr>
                 <tr>
                     <td>Return data about a director (bio, birth year, death year) by name</td>
-                    <td>/movies:title/director</td>
+                    <td>/director</td>
                     <td>GET</td>
                     <td>None</td>
                     <td>A JSON holding the director of a movie by name</td>
