--- a/public/documentation.html
+++ b/public/documentation.html
@@ -40,28 +40,28 @@
                 </tr>
                 <tr>
                     <td>Return data (description, genre, director, image URL, whether it’s featured or not) about a single movie by title to the user</td>
-                    <td>/movies/:title</td>
+                    <td>/movies/:Title</td>
                     <td>GET</td>
                     <td>None</td>
                     <td>A JSON object holding the description, genre, director, image URL, whether it’s featured or not of a movie</td>
                 </tr>
                 <tr>
                     <td>Return data about a genre (description) by name/title (e.g., “Thriller”)</td>
-                    <td>/genre</td>
+                    <td>/genre/:Name</td>
                     <td>GET</td>
                     <td>None</td>
                     <td>A JSON obect holding the genre of the movie</td>
                 </tr>
                 <tr>
                     <td>Return data about a director (bio, birth year, death year) by name</td>
-                    <td>/director</td>
+                    <td>/director/:Name</td>
                     <td>GET</td>
                     <td>None</td>
                     <td>A JSON holding the director of a movie by name</td>
                 </tr>
                 <tr>
                     <td>Allow new users to register</td>
-                    <td>/users/:username</td>
+                    <td>/users/:Username</td>
                     <td>POST</td>
                     <td>A JSON object holding data about the new user,
                      structured like:
@@ -85,21 +85,21 @@
                 </tr>
                 <tr>
                     <td>Allow users to add a movie to their list of favorites (showing only a text that a movie has been added)</td>
-                    <td>/users/:username/movies/:title</td>
+                    <td>/users/:Username/:Title</td>
                     <td>PUT</td>
                     <td>None</td>
                     <td>A text message indicating movie was added to their favorites list</td>  
                 </tr>
                 <tr>
                     <td>Allow users to remove a movie from their list of favorites (showing only a text that a movie has been removed—more on this later)</td>
-                    <td>/users/:username/movie/:title</td>
+                    <td>/users/:Username/:Title</td>
                     <td>DELETE</td>
                     <td>None</td>
                     <td>A text message indicating movie was succesfully removed from list of favorites</td>  
                 </tr>
                 <tr>
                     <td>Allow existing users to deregister (showing only a text that a user email has been removed)</td>
-                    <td>/users/:username</td>
+                    <td>/users/:Username</td>
                     <td>DELETE</td>
                     <td>None</td>
                     <td>A text message indicating user was deregistered</td>  
